Sprint3 release (#139)
* Docker Setup

- Create Dockerfile for frontend
- Create Dockerfile for backend
- Create docker-compose.yml file to execute multiple containers which are frontend, backend, and postgres. Note that you need to create a .env file in the root directory (crave folder) for the POSTGRES environment variables.
- Create a Docker-README.md that contains a list of commands for docker-compose
- Update pom.yml to use java version 17. This should not conflict with any code from the backend

* Create AccountRepositoryTest.java

- Add unit test for the custom sql statement in the AccountRepository

* Make database persist

- Update the application.yml file to make the data persist instead of dropping the schema whenever the application is stopped.

* Logout Implementation

- Implement the logout logic.
- The path for the logout POST request is **auth/logout**. Ensure that you provide the **_BEARER TOKEN_** on the request so that the backend can revoke the valid token.
- Add status messages on registration and login authentication.

#84

* Update Dockerfile

- Hotfix on the backend Dockerfile

* Retrieve authenticated user

- Fix bug with not being able to do HTTP request on Accounts. The fix is to add `@JsonIgnore on the tokens attribute to avoid infinite loops and circular references.
- Create a new endpoint for retrieving the user (auth/profile). You should provide the bearer token in the header.
- Update Registration to include the USER_ROLE when registering.

* Refactor frontend

- Structured components by feature
- Removed custom hooks
- Added common components
- Added google map intergration
- Restructured layout for core components
- Updated the dashboard layout
- Removed the Google Places API
- Added Google Map intergration to locate the user
- Added endpoint to get user from server
- Added pie chart to display ingredients for dish
- Updated user profile page to displat orders
- Add dish tags and search